<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Numbers Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startingPoints">Points: 0</string>
    <string name="startingTargetNumber">Target: 12345</string>
    <string name="classicMode">Classic</string>
    <string name="timeBattleMode">Time Battle</string>
    <string name="randomMode">Random</string>
    
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_out">Sign out</string>
    <string name="your_progress_will_be_uploaded">Your existing achievements and score will be uploaded shortly.</string>
    <string name="must_sign_in">In order to unlock the "Played 100 Games Achievement", Please return to the main screen and sign-in with Google.</string>
    <string name="sign_in_explanation">Sign with Google to upload your achievements and share with friends.</string>
    <string name="signed_out_greeting">Hello, anonymous user (not signed in)!</string>
    <string name="see_your_progress">See your progress:</string>
    <string name="show_achievements">Show Achievements</string>
    <string name="show_leaderboards">Show Leaderboards</string>
    
    <string name="achievements_not_available">Please sign in to view achievements.</string>
    <string name="leaderboards_not_available">Please sign in to view leaderboards.</string>
    <string name="achievement_reached_level_2">Congratulations! You have reached level 2 difficulty!</string>
    <string name="achievement_reached_level_3">Congratulations! You have reached level 3 difficulty!</string>
    <string name="achievement_reached_level_4">Congratulations! You have reached level 4 difficulty!</string>
    <string name="achievement_reached_level_5">Congratulations! You have reached level 5 difficulty!</string>
    <string name="achievement">Achievement</string>
    
    <string name="how2Play">How to play</string>
    <string name="how2PlayExplanation">The goal of the game is to reach the target number, with minimum number of transformations applied to the given number. You swipe in upwards direction to flip the number +1, and in downwards direction to flip the number -1. By clicking on the up/down arrows you flip all numbers by 1. In order to unlock the achievements, it is recommended to be signed-in with Google, while playing.</string>
    <string name="creators">About the creators:</string>
    <string name="aboutTheCreators">This game was made by Gorjan Zajkovski and Martina Janevska. All rights reserved!</string>
    <string name="aboutTheGame">About the Game</string>
    <string name="aboutTheGameExplanation">This game was inspired by a TopCoder task. The source code can be found on <a href="https://github.com/gorjanz/numbers-game">GitHub</a></string>

</resources>