<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/BlanchedAlmond"
    android:overScrollMode="always" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		<ImageView
	        android:id="@+id/exitAboutScreen"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@android:color/transparent"
	        android:src="@drawable/back_button_icon" />
	        
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/app_logo_transparent" />

        <TextView
            android:id="@+id/howToPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/how2Play"
            android:textColor="@color/DarkRed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/howToPlayExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/how2PlayExplanation"
            android:textColor="@color/Black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/creators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/creators"
            android:textColor="@color/DarkRed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aboutTheCreators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/aboutTheCreators"
            android:textColor="@color/Black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/aboutTheGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/aboutTheGame"
            android:textColor="@color/DarkRed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aboutTheGameExplained"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/aboutTheGameExplanation"
            android:textColor="@color/Black"
            android:textSize="14sp" />
    </LinearLayout>

</ScrollView>